--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@ ul {
 }
 
 .nav {
-    background: #00f355e0;
+    background: #ff0000e0;
     padding: 14px 0;
 }
 
@@ -101,7 +101,7 @@ ul {
 .about {
     padding-top: 30px;
     padding-bottom: 112px;
-    background: #b100ec;
+    background: #00ffea;
 }
 
 .about__title {
@@ -138,7 +138,7 @@ ul {
 .works {
     padding-top: 30px;
     padding-bottom: 70px;
-    background: #5C6B81;
+    background: #736a0c3e;
 }
 
 .works__title {
