title birinci commit

--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@ ul {
 }
 
 .nav {
-    background: #000;
+    background: #0024b5f6;
     padding: 14px 0;
 }
 
@@ -138,7 +138,7 @@ ul {
 .works {
     padding-top: 30px;
     padding-bottom: 70px;
-    background: #5C6B81;
+    background: #cbd200;
 }
 
 .works__title {
